# coupled-generator-decomposition

./: .gitignore  README.md  SPCA_best_params.tex  pyproject.toml  setup.py  sub01famous.fif  times.csv
CGD/: CGD.py
TMMSAA/: TMMSAA.py  TMMSAA_trainer.py  larsqp.py  larsqp_trainer.py  unused_larsqp.py  visualize_AA_trajectory.py
TMMSAA.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: C_mmms_spca  MEEGtimes.pt  S_mmms_spca_0_0_rep_0_0  S_mmms_spca_0_0_rep_0_1  S_mmms_spca_0_0_rep_0_10  S_mmms_spca_0_0_rep_0_11  S_mmms_spca_0_0_rep_0_12  S_mmms_spca_0_0_rep_0_13  S_mmms_spca_0_0_rep_0_14  S_mmms_spca_0_0_rep_0_15  S_mmms_spca_0_0_rep_0_16  S_mmms_spca_0_0_rep_0_17  S_mmms_spca_0_0_rep_0_18  S_mmms_spca_0_0_rep_0_19  S_mmms_spca_0_0_rep_0_2  S_mmms_spca_0_0_rep_0_20  S_mmms_spca_0_0_rep_0_21  S_mmms_spca_0_0_rep_0_22  S_mmms_spca_0_0_rep_0_23  S_mmms_spca_0_0_rep_0_24  S_mmms_spca_0_0_rep_0_25  S_mmms_spca_0_0_rep_0_26  S_mmms_spca_0_0_rep_0_27  S_mmms_spca_0_0_rep_0_28  S_mmms_spca_0_0_rep_0_29  S_mmms_spca_0_0_rep_0_3  S_mmms_spca_0_0_rep_0_30  S_mmms_spca_0_0_rep_0_31  S_mmms_spca_0_0_rep_0_32  S_mmms_spca_0_0_rep_0_33  S_mmms_spca_0_0_rep_0_34  S_mmms_spca_0_0_rep_0_35  S_mmms_spca_0_0_rep_0_36  S_mmms_spca_0_0_rep_0_37  S_mmms_spca_0_0_rep_0_38  S_mmms_spca_0_0_rep_0_39  S_mmms_spca_0_0_rep_0_4  S_mmms_spca_0_0_rep_0_40  S_mmms_spca_0_0_rep_0_41  S_mmms_spca_0_0_rep_0_42  (+1562 more)
experiments/: TMMSAA.py  TMMSAA_trainer.py  check_data_split.py  choose_best_model.py  collect_FieldTrip_data_across_modalities.py  collect_WH_data_across_modalities.py  evaluate_SPCA.py  (+26 more)
(+38554 files in other folders)
