[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cgd"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Anders Stevnhoved Olsen", email = "ansol@dtu.dk" },
  { name = "Alexander Neergaard Zahid", email = "aneol@dtu.dk" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["CGD"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
